--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -25,7 +25,7 @@
 .ui-waiting-spinner-container .spinner .container3 > div {
   width: 12px;
   height: 12px;
-  background-color: #fff;
+  background-color: #ccd;
   border-radius: 100%;
   position: absolute;
   -webkit-animation: bouncedelay 1.2s infinite ease-in-out;
