Add application config

--- a/app/views/payment.jade
+++ b/app/views/payment.jade
@@ -6,4 +6,5 @@ block title
 block content
 	script.
 		var request = JSON.parse('!{json}');
+		var price = !{price};
 	.payment-container(data-ng-include="'../pages/payment/payment.html'")
