Payment success page

--- a/app/views/success.jade
+++ b/app/views/success.jade
@@ -4,5 +4,4 @@ block title
 	title Payment successful
 
 block content
-	.alert.alert-info(role="alert").
-		You have successfully completed the payment. We'll notify you as soon as we send the note.
+	.success-container(data-ng-include="'../pages/payment/success.html'")
